Fix bugs with pages not showing
This had to do with the new menu system.

--- a/styles/default.css
+++ b/styles/default.css
@@ -539,10 +539,6 @@ input[type=search]::-webkit-search-results-decoration {
     height: 100%;
     overflow-y: scroll;
 }
-#right > div.selected {
-    display: block !important;
-}
-
 #right .tabs {
     position: relative;
     overflow: hidden;
